--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,19 +38,6 @@ body {
     color: white;
 }
 
-.btn-outline-black {
-    background: white;
-    color: black !important; /* use important to override link colors for <a> elements */
-    border: 1px solid black;
-}
-
-.btn-outline-black:hover,
-.btn-outline-black:active,
-.btn-outline-black:focus {
-    background: black;
-    color: white !important;
-}
-
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -96,9 +83,7 @@ a.category-badge > span.badge:hover {
     right: 10px;
 }
 
-.btt-link,
-.update-link,
-.remove-item {
+.btt-link {
     cursor: pointer;
 }
 
